--- a/package.json
+++ b/package.json
@@ -5,20 +5,16 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "formik": "^2.4.6",
     "next": "14.2.16",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@radix-ui/react-slot": "^1.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@eslint/compat": "^1.1.1",
+    "@eslint/compat": "~1.0.0",
     "@eslint/js": "^9.8.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
@@ -29,6 +25,7 @@
     "@nx/vite": "20.3.0",
     "@nx/web": "20.3.0",
     "@nx/workspace": "20.3.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -41,7 +38,9 @@
     "@vitest/ui": "^1.3.1",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.8.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "^8.41.0",
     "eslint-config-next": "14.2.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -50,11 +49,15 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
+    "lucide-react": "^0.469.0",
     "nx": "20.3.0",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
