implements login using modular contexts

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,8 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@smart-safety-solutions/apis": ["packages/apis/src/index.ts"],
       "@smart-safety-solutions/assets": ["packages/assets/src/index.ts"],
-      "@smart-safety-solutions/components": ["packages/components/src/index.ts"]
+      "@smart-safety-solutions/components": [
+        "packages/components/src/index.ts"
+      ],
+      "@smart-safety-solutions/contexts": ["packages/contexts/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
