--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "async-mutex": "^0.5.0",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "^9.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -31,6 +35,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
