implements dashboard header bar

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,5 +8,9 @@
       "import": "./index.mjs",
       "require": "./index.js"
     }
+  },
+  "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.3"
   }
 }
