--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async-mutex": "^0.5.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.16",
     "react": "18.3.1",
     "react-dom": "18.3.1",
