--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.3"
   }
 }
