adds intitial missed harnesses graph to dashboard

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,5 +8,9 @@
       "import": "./index.mjs",
       "require": "./index.js"
     }
+  },
+  "dependencies": {
+    "lucide-react": "^0.471.0",
+    "recharts": "^2.15.0"
   }
 }
