--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "async-mutex": "^0.5.0",
     "class-variance-authority": "^0.7.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -24,6 +25,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
