--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,6 +10,7 @@
     }
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.5",
     "lucide-react": "^0.471.0",
     "recharts": "^2.15.0"
   }
