--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
+    "pigeon-maps": "^0.22.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-redux": "^9.2.0",
