--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,14 @@
     }
   },
   "dependencies": {
+    "@diceui/combobox": "^0.9.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "lucide-react": "^0.471.0",
     "recharts": "^2.15.0"
   }
